[package]
name = "hackernews"
version = "0.1.0"
authors = ["Phi Nguyen <phind.uet@gmail.com>"]
edition = "2018"

[dependencies]
rss = {version = "1.6.1", features = ["from_url"] }
serde = {version = "1.0.89", features = ["derive"] }
serde_derive = "1.0.89"
serde_json = "1.0.39"
rocket = "0.4.0"
rocket_codegen = "0.4.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
